--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,8 +1,12 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: Nebulosa-Cat # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
+  - name: Nebulosa Cat's Blog
+    url: https://nebulosa-cat.com
+    icon: https://nebulosa-cat.com/wp-content/uploads/2022/04/website-icon.png
+    assignees: Nebulosa-Cat
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
@@ -15,17 +19,20 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: nebulosa-cat.com
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Status Monitor
+  introTitle: "一個基於開源 Status Monitor Project 「Upptime」 部署於 Github 上的網站狀態監視頁面"
+  introMessage: [My Bolg](https://nebulosa-cat.com)
   navbar:
-    - title: Status
+    - title: Status Monitor
       href: /
+    - title: Blog
+      href: https://nebulosa-cat.com
     - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+      href: https://github.com/Nebulosa-Cat/
+  theme: dark
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
